- Shiohara to Shio

--- a/getting-started.html
+++ b/getting-started.html
@@ -446,16 +446,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#getting-started-installing-shiohara-cms">1. Installing Shiohara CMS</a></li>
+<li><a href="#getting-started-installing-shiohara-cms">1. Installing Shio CMS</a></li>
 </ul>
 </div>
 </div>
 <div id="content">
 <div class="sect1">
-<h2 id="getting-started-installing-shiohara-cms">1. Installing Shiohara CMS</h2>
+<h2 id="getting-started-installing-shiohara-cms">1. Installing Shio CMS</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Shiohara CMS can be used with &#8220;classic&#8221; Java development tools or installed as a command line tool.
+<p>Shio CMS can be used with &#8220;classic&#8221; Java development tools or installed as a command line tool.
 Either way, you need <a href="https://www.java.com">Java SDK v1.8</a> or higher.
 Before you begin, you should check your current Java installation by using the following command:</p>
 </div>
@@ -470,7 +470,7 @@ Before you begin, you should check your current Java installation by using the f
 <div id="footer">
 <div id="footer-text">
 Version 0.3.6<br>
-Last updated 2019-11-26 10:42:21 -0300
+Last updated 2020-04-08 14:39:40 -0300
 </div>
 </div>
 </body>
